<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Levantamiento Alumbrado Público</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Nombre de Usuario</string>
    <string name="Clave">Ingrese la clave</string>
    <string name="title_activity_principal">MENÚ PRINCIPAL</string>
    <string name="btn_aceptar">Aceptar</string>

    <!-- mENSAJES DE aLERTA-->
    <string name="msn_errorLogin">EL USUARIO NO EXISTE</string>
    <string name="msn_conexionInternet">NO TIENE CONEXION A INTERNET</string>
    <string name="msn_datosLogin">INGRESE DATOS LOGIN</string>
    <string name="msn_titleLogin">Cargando</string>
    <string name="msn_mensajeLogin">Iniciando sesión...</string>
    <string name="camara">Camara</string>
    <string name="editar">Editar</string>
    <string name="fotoapoyo">Foto Apoyo</string>

    <!-- String de los Botones -->
    <string name="lbl_guardar">Guardar</string>

    <!-- String de la Actividad Apoyo -->
    <string name="lbl_latitud">Latitud:</string>
    <string name="lbl_longitud">Longitud:</string>
    <string name="lbl_codigo">Código Apoyo:</string>
    <string name="lbl_direccion">Dirección:</string>
    <string name="lbl_retenida">Retenida:</string>
    <string name="lbl_ubicacion">Ubicación:</string>
    <string name="lbl_estado">Estado:</string>
    <string name="lbl_tipo">Tipo:</string>
    <string name="lbl_configuracion">Configuración:</string>
    <string name="lbl_marca">Marca:</string>
    <string name="lbl_carga">Carga:</string>
    <string name="lbl_base">Base:</string>
    <string name="lbl_canasta">Canasta:</string>
    <string name="lbl_material">Material:</string>
    <string name="lbl_altura">Altura:</string>
    <string name="title_activity_apoyo">APOYO</string>

    <!-- String de Transformador -->
    <string name="lbl_Codigo_Apoyo">Código Apoyo:</string>
    <string name="lbl_Codigo_Trans">Código Transformafor:</string>
    <string name="lbl_Etiqueta">Etiqueta:</string>
    <string name="lbl_Capacidad">Capacidad KVA:</string>
    <string name="lbl_VoltajePrim">Voltaje Primario:</string>
    <string name="lbl_VoltajeSec">Voltaje Secundario:</string>
    <string name="lbl_Numero_Fases">Número de Fases:</string>
    <string name="lbl_Tipo_Montaje">Tipo Montaje:</string>
    <string name="lbl_Uso">Uso:</string>
    <string name="lbl_Foto_Control">Foto Control:</string>
    <string name="lbl_Linea_Tierra">Línea a Tierra:</string>
    <string name="lbl_Marca">Marca:</string>
    <string name="title_activity_transformador">TRANSFORMADOR</string>

    <!-- String de CAMARA -->
    <string name="lbl_Codigo_Camara">Código Cámara:</string>
    <string name="lbl_Tapa">Tapa:</string>
    <string name="lbl_Diametro_Tapa">Diametro Tapa:</string>
    <string name="lbl_Diametro_Camara">Diametro Cámara:</string>
    <string name="lbl_Configuracion">Configuración:</string>
    <string name="lbl_Observaciones">Observaciones:</string>
    <string name="title_activity_camara">CAMARA</string>

    <!-- String de LUMINARIA -->
    <string name="lbl_Codigo_Luminaria">Código Luminaria:</string>
    <string name="lbl_Codigo_Circuito">Código Circuito:</string>
    <string name="lbl_Proteccion">Protección:</string>
    <string name="lbl_Conector">Conector:</string>
    <string name="lbl_Estado_Bombillo">Estado Bombillo:</string>
    <string name="lbl_Estado_Luminaria">Estado Luminaria:</string>
    <string name="lbl_Fotocelda">Fotocelda:</string>
    <string name="lbl_Tipo_Brazo">Tipo Brazo:</string>
    <string name="title_activity_luminaria">LUMINARIA</string>

    <!-- String de CIRCUITO -->
    <string name="lbl_Codigo_Transformador">Código Transformador:</string>
    <string name="title_activity_circuito">CIRCUITO</string>

    <!-- String de TRAMO -->
    <string name="lbl_Apoyo_Inicial">Apoyo Inicial:</string>
    <string name="lbl_Apoyo_Final">Apoyo Final:</string>
    <string name="lbl_Clase">Clase:</string>
    <string name="lbl_Conductor">Conductor:</string>
    <string name="lbl_Distancia">Distancia (Metros):</string>
    <string name="lbl_Estado">Estado:</string>
    <string name="title_activity_tramo">TRAMO</string>

</resources>
