<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.ingenieria.sigma.applevantamiento.CamaraActivity">

    <item android:id="@+id/camaraCamara"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/camara"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item android:id="@+id/editarCamara"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/editar"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
