<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.ingenieria.sigma.applevantamiento.LuminariaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Codigo_Luminaria"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Codigo_Apoyo"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Codigo_Circuito"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Proteccion"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Conector"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Estado_Bombillo"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Estado_Luminaria"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Fotocelda"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Uso"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Tipo_Brazo"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:text="@string/lbl_Observaciones"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_guardar"

            />

    </LinearLayout>

</ScrollView>
